--- a/source/x1turboz.vcxproj.filters
+++ b/source/x1turboz.vcxproj.filters
@@ -326,7 +326,7 @@
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <Image Include="src\res\x1turboz.ico">
+    <Image Include="x1turboz.ico">
       <Filter>Resource Files</Filter>
     </Image>
   </ItemGroup>
