--- a/source/src/res/fm77av.rc
+++ b/source/src/res/fm77av.rc
@@ -99,8 +99,6 @@ BEGIN
         MENUITEM "Mouse JS-Port1",              ID_DEVICE_TYPE1
         MENUITEM "Mouse JS-Port2",              ID_DEVICE_TYPE2
         MENUITEM SEPARATOR
-        MENUITEM "Use extra RAM",               ID_DIPSWITCH1
-        MENUITEM SEPARATOR
         MENUITEM "Paste",                       ID_AUTOKEY_START
         MENUITEM "Stop",                        ID_AUTOKEY_STOP
         MENUITEM SEPARATOR
@@ -113,22 +111,24 @@ BEGIN
         MENUITEM SEPARATOR
         MENUITEM "Exit",                        ID_EXIT
     END
-    POPUP "FD0"
+    POPUP "FD1"
     BEGIN
         MENUITEM "Insert",                      ID_OPEN_FD1
         MENUITEM "Eject",                       ID_CLOSE_FD1
         MENUITEM SEPARATOR
         MENUITEM "Write Protected",             ID_WRITE_PROTECT_FD1
+        MENUITEM "Correct Timing",              ID_CORRECT_TIMING_FD1
         MENUITEM "Ignore CRC Errors",           ID_IGNORE_CRC_FD1
         MENUITEM SEPARATOR
         MENUITEM "Recent",                      ID_RECENT_FD1
     END
-    POPUP "FD1"
+    POPUP "FD2"
     BEGIN
         MENUITEM "Insert",                      ID_OPEN_FD2
         MENUITEM "Eject",                       ID_CLOSE_FD2
         MENUITEM SEPARATOR
         MENUITEM "Write Protected",             ID_WRITE_PROTECT_FD2
+        MENUITEM "Correct Timing",              ID_CORRECT_TIMING_FD2
         MENUITEM "Ignore CRC Errors",           ID_IGNORE_CRC_FD2
         MENUITEM SEPARATOR
         MENUITEM "Recent",                      ID_RECENT_FD2
@@ -222,8 +222,6 @@ BEGIN
         MENUITEM "200msec",                     ID_SOUND_LATE2
         MENUITEM "300msec",                     ID_SOUND_LATE3
         MENUITEM "400msec",                     ID_SOUND_LATE4
-        MENUITEM SEPARATOR
-        MENUITEM "Stereo sound",                ID_SOUND_MULTIPLE_SPEAKER
         MENUITEM SEPARATOR
         MENUITEM "OPN",                         ID_SOUND_DEVICE_TYPE1
         MENUITEM "OPN+WHG",                     ID_SOUND_DEVICE_TYPE3
