--- a/source/src/res/pc9801u.rc
+++ b/source/src/res/pc9801u.rc
@@ -206,8 +206,9 @@ BEGIN
         MENUITEM SEPARATOR
         MENUITEM "PC-9801-26 (BIOS Enabled)",   ID_SOUND_DEVICE_TYPE0
         MENUITEM "PC-9801-26 (BIOS Disabled)",  ID_SOUND_DEVICE_TYPE1
-        MENUITEM "PC-9801-14",                  ID_SOUND_DEVICE_TYPE2
-        MENUITEM "None",                        ID_SOUND_DEVICE_TYPE3
+        MENUITEM "PC-9801-14 (BIOS Enabled)",   ID_SOUND_DEVICE_TYPE2
+        MENUITEM "PC-9801-14 (BIOS Disabled)",  ID_SOUND_DEVICE_TYPE3
+        MENUITEM "None",                        ID_SOUND_DEVICE_TYPE4
     END
     POPUP "Input"
     BEGIN
