--- a/source/src/qt/debugger/CMakeLists.txt
+++ b/source/src/qt/debugger/CMakeLists.txt
@@ -12,7 +12,7 @@ endif()
  
 add_library(qt_debugger
           qt_debugger.cpp
-          debugger_thread.cpp
+#          debugger_thread.cpp
 	  ${s_qt_debugger_headers_MOC}
 )
 
