--- a/source/build-cmake/sc3000/CMakeLists.txt
+++ b/source/build-cmake/sc3000/CMakeLists.txt
@@ -13,16 +13,8 @@ message("")
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
 
 project (sc3000)
-
-set(LOCAL_LIBS 	   qt_osd
-		   qt_debugger
-		   qt_sc3000
-		   qt_gui
-		   vm_sc3000
-		   vm_vm
-		   common_common		   
-                   )
-
+set(VM_NAME sc3000)
+set(USE_FMGEN OFF)
 set(VMFILES
 		   z80.cpp
 		   
@@ -43,22 +35,13 @@ set(VMFILES
 set(BUILD_SHARED_LIBS OFF)
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
 set(USE_OPENGL ON CACHE BOOL "Build using OpenGL")
+set(WITH_DEBUGGER ON CACHE BOOL "Build with debugger")
 
 include(detect_target_cpu)
-# set entry
 set(CMAKE_SYSTEM_PROCESSOR ${ARCHITECTURE} CACHE STRING "Set processor to build.")
 
 add_definitions(-D_SC3000)
 set(EXEC_TARGET emusc3000)
 set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/sc3000.qrc)
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/sc3000)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/machines/sc3000)
-
 include(config_commonsource)
-
-add_subdirectory(../../src/vm/sc3000 vm/sc3000)
-add_subdirectory(../../src/qt/machines/sc3000 qt/sc3000)
-add_subdirectory(../../src/qt/common qt/common)
-add_subdirectory(../../src/qt/debugger qt/debugger)
