--- a/source/build-cmake/scv/CMakeLists.txt
+++ b/source/build-cmake/scv/CMakeLists.txt
@@ -13,16 +13,8 @@ message("")
 set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
 
 project (scv)
-
-set(LOCAL_LIBS 	   qt_osd
-		   qt_debugger
-		   qt_scv
-		   qt_gui
-		   vm_scv
-		   vm_vm
-		   common_common		   
-                   )
-
+set(VM_NAME scv)
+set(USE_FMGEN OFF)
 set(VMFILES
 		   upd7801.cpp
 		   
@@ -32,22 +24,13 @@ set(VMFILES
 set(BUILD_SHARED_LIBS OFF)
 set(USE_OPENMP ON CACHE BOOL "Build using OpenMP")
 set(USE_OPENGL ON CACHE BOOL "Build using OpenGL")
+set(WITH_DEBUGGER ON CACHE BOOL "Build with debugger")
 
 include(detect_target_cpu)
-# set entry
 set(CMAKE_SYSTEM_PROCESSOR ${ARCHITECTURE} CACHE STRING "Set processor to build.")
 
 add_definitions(-D_SCV)
 set(EXEC_TARGET emuscv)
 set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/scv.qrc)
 
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/scv)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/machines/scv)
-
 include(config_commonsource)
-
-add_subdirectory(../../src/vm/scv vm/scv)
-add_subdirectory(../../src/qt/machines/scv qt/scv)
-add_subdirectory(../../src/qt/common qt/common)
-add_subdirectory(../../src/qt/debugger qt/debugger)
