--- a/source/build-cmake/ys6464a/CMakeLists.txt
+++ b/source/build-cmake/ys6464a/CMakeLists.txt
@@ -16,15 +16,8 @@ set(CMAKE_MODULE_PATH "${CMAKE_SOURCE_DIR}/../cmake")
 project (emuys6464a)
 
 set(EXEC_TARGET emuys6464a)
-
-set(LOCAL_LIBS 	   qt_osd
-		   qt_ys6464a
-		   qt_gui
-		   vm_ys6464a
-		   vm_vm
-		   common_common		   
-                   )
-
+set(VM_NAME ys6464a)
+set(USE_FMGEN OFF)
 set(VMFILES_BASE
   z80.cpp
   i8255.cpp
@@ -42,8 +35,6 @@ set(WITH_DEBUGGER OFF CACHE BOOL "Build with debugger.")
 
 
 include(detect_target_cpu)
-#include(windows-mingw-cross)
-# set entry
 set(CMAKE_SYSTEM_PROCESSOR ${ARCHITECTURE} CACHE STRING "Set processor to build.")
 
 set(VMFILES ${VMFILES_BASE})
@@ -52,16 +43,4 @@ add_definitions(-D_YS6464A)
 add_definitions(-DWITHOUT_SOUND)
 set(RESOURCE ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/ys6464a.qrc)
 
-
-#include_directories(${CMAKE_CURRENT_SOURCE_DIR})
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/vm/ys6464a)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt)
-include_directories(${CMAKE_CURRENT_SOURCE_DIR}/../../src/qt/machines/ys6464a)
-
 include(config_commonsource)
-
-add_subdirectory(../../src/vm/ys6464a vm/ys6464a)
-add_subdirectory(../../src/qt/machines/ys6464a qt/ys6464a)
-     
-add_subdirectory(../../src/qt/common qt/common)
