--- a/source/build-cmake/pcengine/CMakeLists.txt
+++ b/source/build-cmake/pcengine/CMakeLists.txt
@@ -21,9 +21,15 @@ set(WITH_MOUSE OFF)
 
 set(VMFILES_BASE
 		   huc6280.cpp
+		   scsi_cdrom.cpp
+		   scsi_host.cpp
+		   scsi_dev.cpp
+		   msm5205.cpp
+		   
 		   event.cpp
 		   io.cpp
 		   memory.cpp
+		   
 )
 
 
