--- a/source/src/qt/common/CMakeLists.txt
+++ b/source/src/qt/common/CMakeLists.txt
@@ -28,9 +28,13 @@ set(QT_COMMON_BASE
 
 if(USE_QT_5)
   QT5_ADD_RESOURCES(s_qt_common_RCC ${RESOURCE}
+                    ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/commontexts.qrc
+                    ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/shaders.qrc
                     ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/icons.qrc)
 else()
   QT4_ADD_RESOURCES(s_qt_common_RCC ${RESOURCE} 
+                    ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/commontexts.qrc
+                    ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/shaders.qrc
                     ${CMAKE_SOURCE_DIR}/../../src/qt/common/qrc/icons.qrc)
 endif()
 
